--- a/index.html
+++ b/index.html
@@ -77,12 +77,19 @@ body {
     padding: 0px;
 }
 
+#link {
+    margin-left: -50%;
+    font-size: 26px;
+    padding: 0px;
+}
+
+
 </style>
 
 <title>Hackathon FCT NOVA 2018 - Clock</title>
 
 </head>
-<body onload="currentTime()">
+<body onload="pageSetup()">
 
 <video autoplay muted loop id="myVideo">
   <source src="video.mp4" type="video/mp4">
@@ -92,6 +99,7 @@ body {
 <div class="content">
   <p id="countdown">24:00:00</h1>
   <p id="currentTime">00:00:00</p>
+  <p id="link">https://github.com/Hackathon-FCT-NOVA-2018</p>
   <button id="startbutton" onclick="startCountDown()">▶</button>
   <div style="padding-top: 10%;"><button id="myBtn" onclick="myFunction()">Play</button></div>
 </div>
@@ -121,6 +129,20 @@ function currentTime() {
     h + ":" + m + ":" + s;
     var t = setTimeout(currentTime, 500);
 }
+
+function currentTime() {
+    var today = new Date();
+    var h = today.getHours();
+    var m = today.getMinutes();
+    var s = today.getSeconds();
+    m = checkTime(m);
+    s = checkTime(s);
+    document.getElementById('currentTime').innerHTML =
+    h + ":" + m + ":" + s;
+    var t = setTimeout(currentTime, 500);
+}
+
+
 function checkTime(i) {
     if (i < 10) {i = "0" + i};  // add zero in front of numbers < 10
     return i;
@@ -128,14 +150,32 @@ function checkTime(i) {
 
 
 var countDownDate;
+var loaded;
+    
+function pageSetup(){
+
+    //loaded = localStorage.getItem("startDate");
+    currentTime();
+    startCountDown();
+    ///console.log(loaded);
+    //if(loaded != undefined)
+    //    countDownFromLoaded(loaded);
+
+    //console.log(loaded);
+
+}
+
 
 function startCountDown(){
-    
+
     document.getElementById("startbutton").style.display = 'none';
 
     var nowTime = new Date();
+    var startTime = new Date(2018, 03, 17, 15, 05, 54, 00);
 
-    countDownDate = new Date(nowTime.getTime() + 1440 * 60000);
+    countDownDate = new Date(startTime.getTime() + 1440 * 60000);
+    console.log("StartTime = " + nowTime);
+    localStorage.setItem("startDate", JSON.stringify(nowTime));
 
     countDown();
 
@@ -173,6 +213,42 @@ function countDown(){
     }, 999);
 
 }
+
+
+function countDownFromLoaded(date){
+
+// Update the count down every 1 second
+var x = setInterval(function() {
+
+// Get todays date and time
+var now = date;
+console.log(date);
+console.log(now)
+
+// Find the distance between now an the count down date
+var distance = countDownDate - now;
+
+// Time calculations for days, hours, minutes and seconds
+var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+minutes = checkTime(minutes);
+seconds = checkTime(seconds);
+
+// Display the result in the element with id="demo"
+document.getElementById("countdown").innerHTML = hours + ":"
++ minutes + ":" + seconds;
+
+// If the count down is finished, write some text 
+if (distance < 0) {
+    clearInterval(x);
+    document.getElementById("countdown").innerHTML = "Acabou! 💪";
+}
+}, 999);
+
+}
+
 
 
 </script>
