Added new team name (15)

--- a/teams.html
+++ b/teams.html
@@ -110,7 +110,8 @@ body {
 11	Joinme
 12	Math Conquest
 13	Mooda
-14	College: The Game</pre>
+14	College: The Game
+15      Recippe</pre>
 <!--
   <p id="countdown">24:00:00</h1>
   <p id="currentTime">00:00:00</p>
