An update was made, honestly don't know what

--- a/v2019/index.html
+++ b/v2019/index.html
@@ -110,7 +110,8 @@ body {
     <span style="margin-top: 100px;">   
         Actual <span id="currentTime" style="font-size: 50px">00:00:00</span>
     </span>    
-    <h1>Fazer download Kahoot</h1>
+    <h1>Pitch intermédio 17h00</h1>
+    <!--<h3><i>Leite primeiro dá direito a ban</i></h3>-->
     <button id="startbutton" onclick="startCountDown()"> </button>
     <div style="padding-top: 10%;"><button id="myBtn" onclick="myFunction()"> </button></div>
 </div>
